started updating some home learning descriptions

--- a/homeLearning.html
+++ b/homeLearning.html
@@ -67,16 +67,16 @@
       </tr>
       <tr>
         <td> <a href="https://sts.platform.rmunify.com/account/signin/glow"> <img src="https://pbs.twimg.com/profile_images/542261038574358528/PUswggVZ_400x400.png" class="HLimg"> </a> </td>
-        <td> Log in to Glow to access email and other learning activities. </td>
+        <td> <h4 class="HLTitle">Glow</h4> <br> Children can log in to access their emails and other learning activities. </td>
       </tr>
       <tr>
         <td> <a href="https://www.studyladder.co.uk/?lc_set="> <img src="https://i.pinimg.com/280x280_RS/f1/22/49/f12249b7c3eebed24d1ca386106d997e.jpg" class="HLimg"> </a> </td>
-        <td> Mathematics, English, Science and more. Many children in the school have log ins for this. Study Ladder
+        <td><h4 class="HLTitle"> Studyladder </h4> <br> Mathematics, English, Science and more. Many children in the school have log ins for this. Study Ladder
           will allow children to access their free account during school hours </td>
       </tr>
       <tr>
         <td>  <a href="https://www.bbc.co.uk/bitesize/primary"> <img src="https://ichef.bbci.co.uk/images/ic/1200xn/p0dpbj2m.jpg" class="HLimg"> </a> </td>
-        <td> BBC Bitesize - links to games and activities to help with lots of curricular areas. </td>
+        <td> <h4 class="HLTitle"> BBC Bitesize </h4> Links to games and activities to help with lots of curricular areas. </td>
       </tr>
       <tr>
         <td> <a href="https://www.sheppardsoftware.com"> <img src="https://www.sheppardsoftware.com/design/images/header_logo.jpg" class="HLimg"> </a></td>
