change happened i guess

--- a/faq.html
+++ b/faq.html
@@ -15,7 +15,7 @@
   <div class="header">
     <div class="top-bar">
 
-      <div> <a href="index.html"><img id="logo" src="bpslogo.png"></a> </div>
+      <div> <a href="index.html"><img id="logo" src="images/bpslogo.png"></a> </div>
 
       <div class="title">
         <h1>Barnhill Primary School<h1>
