--- a/homeLearning.html
+++ b/homeLearning.html
@@ -45,7 +45,7 @@
       </ul>
 
     </nav>
-    <div> <a href="index.html"><img id="logo" src="bpslogo.png"></a> </div>
+    <div> <a href="index.html"><img id="logo" src="images/bpslogo.png"></a> </div>
     <h1> Barnhill Primary School </h1>
   </header>
 
