--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <script src="myscripts.js"></script>
+  <script src="script.js"></script>
 
   <!-- ------------------- Navigation ------------------- -->
 
