--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       <li class="dropdown">
         <span class="aboutBtn" onclick="abtDrpDwn()">About </span>
-        <div class="dropdown-content"> <!-- Opens div class dropdown-content-->
+        <div id="dropdown-content"> <!-- Opens div class dropdown-content-->
           <a href="faq.html">FAQ</a>
           <a href="dates.html">Dates</a>
           <a href="staff.html">Staff</a>
