--- a/homeLearning.html
+++ b/homeLearning.html
@@ -4,52 +4,39 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Home Learning</title>
+  <title>Home</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
+  <script src="script.js"></script>
 
-  <script> 
-  function hideTable(tableID) {
-    var table = document.getElementById(tableID);
-    if (table.style.display == "none") {
-    table.style.display = "";
-    } else {
-      table.style.display = "none"
-    }
-  }
-  
-  </script>
-  <!-- ------------------- Top Bar ------------------- -->
-  <header>
+  <!-- ------------------- Navigation ------------------- -->
 
-    <nav>
+  <nav>
 
-      <ul>
+    <ul>
 
-        <li><a href="index.html">Home</a></li>
-        <li class="dropdown">
-          <span class="aboutBtn">About </span>
-          <div class="dropdown-content"> <!-- Opens div class dropdown-content-->
-            <a href="faq.html">FAQ</a>
-            <a href="dates.html">Dates</a>
-            <a href="staff.html">Staff</a>
-            <a href="uniform.html">Uniform</a>
-          </div> <!-- Closes div class dropdown-content -->
-        </li>
-        <li><a href="news.html">News</a></li>
-        <li><a href="homeLearning.html">Home Learning</a></li>
-        <li><a href="contact.html">Contact</a></li>
+      <a href="index.html"><img id="logo" alt="Barnhill Primary School Logo" src="images/bpslogo.png"></a>
 
-      </ul>
+      <li><a href="index.html">Home</a></li>
 
-    </nav>
-    <div> <a href="index.html"><img id="logo" src="images/bpslogo.png"></a> </div>
-    <h1> Barnhill Primary School </h1>
-  </header>
+      <li class="dropdown">
+        <span class="aboutBtn" onclick="abtDrpDwn()">About </span>
+        <div id="dropdown-content"> <!-- Opens div class dropdown-content-->
+          <a href="faq.html">FAQ</a>
+          <a href="dates.html">Dates</a>
+          <a href="staff.html">Staff</a>
+          <a href="uniform.html">Uniform</a>
+        </div> <!-- Closes div class dropdown-content -->
+      </li>
 
+      <li><a href="news.html">News</a></li>
+      <li><a href="homeLearning.html">Home Learning</a></li>
+      <li><a href="contact.html">Contact</a></li>
 
+    </ul>
+  </nav>
   <!-- ------------------- Main Body ------------------- -->
 
   <div class="mainBody"> <!-- Opens div class mainBody -->
