--- a/homeLearning.html
+++ b/homeLearning.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Home</title>
+  <title>Home Learning</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -12,7 +12,7 @@
   <script src="script.js"></script>
 
   <!-- ------------------- Navigation ------------------- -->
-
+<header> </header>
   <nav>
 
     <ul>
