temporary banner push for styling

--- a/homeLearning.html
+++ b/homeLearning.html
@@ -12,7 +12,7 @@
   <script src="script.js"></script>
 
   <!-- ------------------- Navigation ------------------- -->
-<header> </header>
+<header> <h1> Barnhill Primary School </h1> </header>
   <nav>
 
     <ul>
