--- a/uniform.html
+++ b/uniform.html
@@ -1,53 +1,41 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width" , initial-scale=1.0>
-  <title>Home</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
-</head>
-
-<body>
-  <script> 
-    function hideSection(sectionID) {
-      var section = document.getElementById(sectionID);
-      if (section.style.display == "none") {
-      section.style.display = "";
-      } else {
-        section.style.display = "none"
-      }
-    }
-    </script>
-
-  <!-- ------------------- Navigation ------------------- -->
-
-  <header>
-
+  <html>
+  
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Uniform</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  
+  <body>
+    <script src="script.js"></script>
+  
+    <!-- ------------------- Navigation ------------------- -->
+  <header> <h1> Barnhill Primary School </h1> </header>
     <nav>
-
+  
       <ul>
-
+  
+        <a href="index.html"><img id="logo" alt="Barnhill Primary School Logo" src="images/bpslogo.png"></a>
+  
         <li><a href="index.html">Home</a></li>
+  
         <li class="dropdown">
-          <span class="aboutBtn">About </span>
-          <div class="dropdown-content"> <!-- Opens div class dropdown-content-->
+          <span class="aboutBtn" onclick="abtDrpDwn()">About </span>
+          <div id="dropdown-content"> <!-- Opens div class dropdown-content-->
             <a href="faq.html">FAQ</a>
             <a href="dates.html">Dates</a>
             <a href="staff.html">Staff</a>
             <a href="uniform.html">Uniform</a>
           </div> <!-- Closes div class dropdown-content -->
         </li>
+  
         <li><a href="news.html">News</a></li>
         <li><a href="homeLearning.html">Home Learning</a></li>
         <li><a href="contact.html">Contact</a></li>
-
+  
       </ul>
-
-    </nav>
-    <div> <a href="index.html"><img id="logo" src="bpslogo.png"></a> </div>
-    <h1> Barnhill Primary School </h1>
-  </header>
 
   <!-- ------------------- Main Body ------------------- -->
 
@@ -226,6 +214,16 @@
 
 
     </div>
+    <script> 
+      function hideSection(sectionID) {
+        var section = document.getElementById(sectionID);
+        if (section.style.display == "none") {
+        section.style.display = "";
+        } else {
+          section.style.display = "none"
+        }
+      }
+      </script>
 
     <!-- ------------------- Footer ------------------- -->
 
