--- a/staff.html
+++ b/staff.html
@@ -41,6 +41,8 @@
 
     <div class="mainBody"> <!-- Opens div class mainBody -->
 
+      <div class="content">
+
       <div class="gridContainer">
 
         <h2 class="gridHead"> TempName: </h2>
@@ -131,7 +133,8 @@
           </tr>
         </table>
       </div>
-    </div> <!-- Closes div class mainBody -->
+    </div>
+   
 
     <!-- ------------------- Footer ------------------- -->
 
@@ -167,6 +170,7 @@
 
       </footer>
     </div> <!-- Closes div class footer -->
+  </div> <!-- Closes div class mainBody -->
 </body>
 
 </html>
