--- a/faq.html
+++ b/faq.html
@@ -10,6 +10,7 @@
   
   <body>
     <script src="script.js"></script>
+    <div class="mainBody"> <!-- Opens div class mainBody -->
   
     <!-- ------------------- Navigation ------------------- -->
   <header> <h1> Barnhill Primary School </h1> </header>
@@ -38,34 +39,33 @@
       </ul>
 
     <!-- ------------------- Main Body ------------------- -->
+    <div class="content"> <!-- Opens div class content -->
+    
 
-    <div class="mainBody"> <!-- Opens div class mainBody -->
+      <h1 id="pageTitle"> Frequently asked questions</h1>
 
-      <h1> Frequently asked questions</h1>
-      <h5>Barnhill Primary FAQ's</h5><br>
+      <h2 class="question"> When does the school open and close?</h2>
+      <p>The school is open from 09:00 to 15:15, Monday to Friday.</p>
 
-      <h2>School opening and closing times</h2>
-      <p>09:00-15:15</p><br>
+      <h2 class="question"> When are the pupil's break and lunch times?</h2>
+      <p class="answer">Break is from 11:10 to 11:30<br>Lunch is from 13:15 to 14:00</p>
 
-      <h2>School break and lunch times</h2>
-      <p>Break: 11:10 - 11:30<br>Lunch: 13:15 - 14:00</p><br>
-
-      <h2>School Dinners</h2>
-      <p>School Dinners are free for P1-5 and cost £2.10 per day for P6-7. Please follow the link to Parent Pay if you
+      <h2 class="question">School Dinners</h2>
+      <p class="answer">School Dinners are free for P1-5 and cost £2.10 per day for P6-7. Please follow the link to Parent Pay if you
         do not already have an account. Children make a choice of RED, BLUE or ORANGE lunch in the morning, in order
         that they can have the dinner of their choice. Dinners can be ordered from home up to 4 weeks in advance on
         Parent Pay. Menus are updated regularly by Tayside Contracts.</p><br>
 
-      <h2>Strikes or Snow days</h2>
-      <p>In the case of the school being shut due to dangerous weather conditions or strikes, parents will recieve a
-        text in the morning at 08:00</p><br>
+      <h2 class="question">Strikes or Snow days</h2>
+      <p class="answer">In the case of the school being shut due to dangerous weather conditions or strikes, parents will recieve a
+        text in the morning at 08:00. Children may continue to learn via the links on our <a href="homeLearning.html"> Home Learning page</a> if they so wish.</p>
 
       <p> For more information on the school uniform click <a href="uniform.html">here</a> <br>For more information on
         our privacy policy, click <a
           href="https://www.dundeecity.gov.uk/service-area/children-and-families-service/schools-privacy-statement">here</a>
       </p>
 
-    </div> <!-- Closes div class mainBody -->
+    </div> <!-- Closes div class content -->
 
     <!-- ------------------- Footer ------------------- -->
 
@@ -101,6 +101,7 @@
 
       </footer>
     </div> <!-- Closes div class footer -->
+  </div> <!-- Closes div class mainBody -->
 </body>
 
 </html>
