--- a/faq.html
+++ b/faq.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Uniform</title>
+    <title>FAQ</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   
@@ -37,6 +37,7 @@
         <li><a href="contact.html">Contact</a></li>
   
       </ul>
+      </nav>
 
     <!-- ------------------- Main Body ------------------- -->
     <div class="content"> <!-- Opens div class content -->
