--- a/staff.html
+++ b/staff.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Uniform</title>
+    <title>Staff</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   
@@ -14,9 +14,6 @@
     <!-- ------------------- Navigation ------------------- -->
   <header> <h1> Barnhill Primary School </h1> </header>
     <nav>
-  
-
-      
   
         <a href="index.html"><img id="logo" alt="Barnhill Primary School Logo" src="images/bpslogo.png"></a>
   
