--- a/faq.html
+++ b/faq.html
@@ -49,7 +49,7 @@
 
       <div class="QnA">
         <h2 class="question"> When does the school open and close?</h2>
-        <p>The school is open from 09:00 to 15:15, Monday to Friday.</p>
+        <p class="answer">The school is open from 09:00 to 15:15, Monday to Friday.</p>
       </div>
 
       <div class="QnA">
