--- a/staff.html
+++ b/staff.html
@@ -36,12 +36,13 @@
         <li><a href="contact.html">Contact</a></li>
   
       </ul>
+     </nav>
 
       <div class="content">
 
       <div class="gridContainer">
 
-        <h2 class="gridHead"> TempName: </h2>
+        <h2 class="gridHead"> Leadership: </h2>
         <h2 class="gridHead"> School: </h2>
         <h2 class="gridHead"> Nursery: </h2>
         <table class="gridTable">
