--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Uniform</title>
+    <title>Contact</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   
@@ -42,14 +42,13 @@
 
   <div class="mainBody"> <!-- Opens div class mainBody -->
 
-    <h1>Contact</h1>
-    <div id="location" style="float: right;">
-    <h2> Location </h2>
-    <iframe
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2203.3672835063953!2d-2.8576694596827665!3d56.478660535962945!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48865ef4b049440f%3A0xbf911ad0ca76e7f8!2sBarnhill%20Primary%20School!5e0!3m2!1sen!2suk!4v1708007344974!5m2!1sen!2suk"
-      width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+    <h1 id="pageTitle">Contact</h1>
+    <div id="location">
+    <h2 style="display:block;text-align: center;"> Location </h2>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2203.3672835063953!2d-2.8576694596827665!3d56.478660535962945!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48865ef4b049440f%3A0xbf911ad0ca76e7f8!2sBarnhill%20Primary%20School!5e0!3m2!1sen!2suk!4v1708007344974!5m2!1sen!2suk"
+      id="map"width="400" height="400" allowfullscreen="" loading="lazy"
       referrerpolicy="no-referrer-when-downgrade"></iframe>
-    <p>Falkland Crescent <br> Dundee <br> DD5 3SQ </p>
+    <p style="display: inline-block;">Falkland Crescent <br> Dundee <br> DD5 3SQ </p>
   </div>
 
     <h2> Tel: </h2>
