Updated some HL Descriptions Added some standard styling to all pages Fixed formatting of files

--- a/contact.html
+++ b/contact.html
@@ -1,42 +1,44 @@
 <!DOCTYPE html>
-  <html>
-  
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Contact</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-  </head>
-  
-  <body>
-    <script src="script.js"></script>
-  
-    <!-- ------------------- Navigation ------------------- -->
-  <header> <h1> Barnhill Primary School </h1> </header>
-    <nav>
-  
-      <ul>
-  
-        <a href="index.html"><img id="logo" alt="Barnhill Primary School Logo" src="images/bpslogo.png"></a>
-  
-        <li><a href="index.html">Home</a></li>
-  
-        <li class="dropdown">
-          <span class="aboutBtn" onclick="abtDrpDwn()">About </span>
-          <div id="dropdown-content"> <!-- Opens div class dropdown-content-->
-            <a href="faq.html">FAQ</a>
-            <a href="dates.html">Dates</a>
-            <a href="staff.html">Staff</a>
-            <a href="uniform.html">Uniform</a>
-          </div> <!-- Closes div class dropdown-content -->
-        </li>
-  
-        <li><a href="news.html">News</a></li>
-        <li><a href="homeLearning.html">Home Learning</a></li>
-        <li><a href="contact.html">Contact</a></li>
-  
-      </ul>
-      </nav>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Contact</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+  <script src="script.js"></script>
+
+  <!-- ------------------- Navigation ------------------- -->
+  <header>
+    <h1> Barnhill Primary School </h1>
+  </header>
+  <nav>
+
+    <ul>
+
+      <a href="index.html"><img id="logo" alt="Barnhill Primary School Logo" src="images/bpslogo.png"></a>
+
+      <li><a href="index.html">Home</a></li>
+
+      <li class="dropdown">
+        <span class="aboutBtn" onclick="abtDrpDwn()">About </span>
+        <div id="dropdown-content"> <!-- Opens div class dropdown-content-->
+          <a href="faq.html">FAQ</a>
+          <a href="dates.html">Dates</a>
+          <a href="staff.html">Staff</a>
+          <a href="uniform.html">Uniform</a>
+        </div> <!-- Closes div class dropdown-content -->
+      </li>
+
+      <li><a href="news.html">News</a></li>
+      <li><a href="homeLearning.html">Home Learning</a></li>
+      <li><a href="contact.html">Contact</a></li>
+
+    </ul>
+  </nav>
 
   <!-- ------------------- Main Body ------------------- -->
 
@@ -44,12 +46,13 @@
 
     <h1 id="pageTitle">Contact</h1>
     <div id="location">
-    <h2 style="display:block;text-align: center;"> Location </h2>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2203.3672835063953!2d-2.8576694596827665!3d56.478660535962945!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48865ef4b049440f%3A0xbf911ad0ca76e7f8!2sBarnhill%20Primary%20School!5e0!3m2!1sen!2suk!4v1708007344974!5m2!1sen!2suk"
-      id="map"width="400" height="400" allowfullscreen="" loading="lazy"
-      referrerpolicy="no-referrer-when-downgrade"></iframe>
-    <p style="display: inline-block;">Falkland Crescent <br> Dundee <br> DD5 3SQ </p>
-  </div>
+      <h2 style="display:block;text-align: center;"> Location </h2>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2203.3672835063953!2d-2.8576694596827665!3d56.478660535962945!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48865ef4b049440f%3A0xbf911ad0ca76e7f8!2sBarnhill%20Primary%20School!5e0!3m2!1sen!2suk!4v1708007344974!5m2!1sen!2suk"
+        id="map" width="400" height="400" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <p style="display: inline-block;">Falkland Crescent <br> Dundee <br> DD5 3SQ </p>
+    </div>
 
     <h2> Tel: </h2>
     <ul>
