--- a/dates.html
+++ b/dates.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Uniform</title>
+    <title>Dates</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   
@@ -41,6 +41,7 @@
     <!-- ------------------- Main Body ------------------- -->
 
     <div class="mainBody"> <!-- Opens div class mainBody -->
+        <h1 id="pageTitle"> Dates</h1>
       
           <div class="calendar-container">
               <header class="calendar-header">
