--- a/news.html
+++ b/news.html
@@ -1,100 +1,103 @@
 <!DOCTYPE html>
-  <html>
-  
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Uniform</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-  </head>
-  
-  <body>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>News</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+  <script src="script.js"></script>
+
+  <!-- ------------------- Navigation ------------------- -->
+  <header>
+    <h1> Barnhill Primary School </h1>
+  </header>
+  <nav>
+
+    <ul>
+
+      <a href="index.html"><img id="logo" alt="Barnhill Primary School Logo" src="images/bpslogo.png"></a>
+
+      <li><a href="index.html">Home</a></li>
+
+      <li class="dropdown">
+        <span class="aboutBtn" onclick="abtDrpDwn()">About </span>
+        <div id="dropdown-content"> <!-- Opens div class dropdown-content-->
+          <a href="faq.html">FAQ</a>
+          <a href="dates.html">Dates</a>
+          <a href="staff.html">Staff</a>
+          <a href="uniform.html">Uniform</a>
+        </div> <!-- Closes div class dropdown-content -->
+      </li>
+
+      <li><a href="news.html">News</a></li>
+      <li><a href="homeLearning.html">Home Learning</a></li>
+      <li><a href="contact.html">Contact</a></li>
+
+    </ul>
+  </nav>
+
+  <!-- ------------------- Main Body ------------------- -->
+
+  <div class="mainBody"> <!-- Opens div class mainBody -->
+
+    <h1 id="pageTitle"> News</h1>
+    <h2>This week's news!</h2>
+
     <script src="script.js"></script>
-  
-    <!-- ------------------- Navigation ------------------- -->
-  <header> <h1> Barnhill Primary School </h1> </header>
-    <nav>
-  
-      <ul>
-  
-        <a href="index.html"><img id="logo" alt="Barnhill Primary School Logo" src="images/bpslogo.png"></a>
-  
-        <li><a href="index.html">Home</a></li>
-  
-        <li class="dropdown">
-          <span class="aboutBtn" onclick="abtDrpDwn()">About </span>
-          <div id="dropdown-content"> <!-- Opens div class dropdown-content-->
-            <a href="faq.html">FAQ</a>
-            <a href="dates.html">Dates</a>
-            <a href="staff.html">Staff</a>
-            <a href="uniform.html">Uniform</a>
-          </div> <!-- Closes div class dropdown-content -->
-        </li>
-  
-        <li><a href="news.html">News</a></li>
-        <li><a href="homeLearning.html">Home Learning</a></li>
-        <li><a href="contact.html">Contact</a></li>
-  
-      </ul>
-      </nav>
 
-    <!-- ------------------- Main Body ------------------- -->
+    <iframe src="https://sway.cloud.microsoft/s/nARFYvD7QQTki0DN/embed" title="Sway Newsletter"
+      style="height:200px; width:500px; border:2px solid red; display: block;"></iframe>
 
-    <div class="mainBody"> <!-- Opens div class mainBody -->
+    <h1> Junior Leadership</h1>
+    <p> Pupil Voice is extremely important in our school and we believe that the Junior Leadership Team allows our
+      pupils to have an
+      active role in the decision making process within the school as well as the learning and teaching process. Every
+      class has their
+      own representative voted by their peers and children within the school are encouraged to talk to their class
+      reps about any issues
+      of concern. This year, our JLT produced the first digital edition of BRILL News which
+      can be found above. </p>
 
-      <h1>This week's news!</h1>
+  </div> <!-- Closes div class mainBody -->
 
-      <script src="script.js"></script>
+  <!-- ------------------- Footer ------------------- -->
 
-      <iframe src="https://sway.cloud.microsoft/s/nARFYvD7QQTki0DN/embed" title="Sway Newsletter"
-        style="height:200px; width:500px; border:2px solid red; display: block;"></iframe>
+  <div class="footer"> <!-- Opens div class footer -->
+    <footer>
+      <div class="footerLeft"> <!-- Opens div class footerLeft -->
+        <!--float this left-->
+        <h3> Useful Links</h3>
+        <a href="https://twitter.com/BarnhillPrimary"><img
+            src="https://www.phoronix.net/image.php?id=2023&image=twitter_x" alt="X (Twitter)"
+            style="width: 60px; height:60px;"></a>
+        <a href="https://secure.glowscotland.org.uk/login/login.htm"><img
+            src="https://tse3.mm.bing.net/th?id=OIP.2e_o-42OuCuPqAyTXplgXAHaEc&pid=Api" alt="Glow RM Unify"
+            style="width: 60px; height:60px;"></a>
+        <a href="https://www.dundeecity.gov.uk/"><img
+            src="https://tse2.mm.bing.net/th?id=OIP.mOvYybLpOpVzVJpuYj5pjQHaFM&pid=Api" alt="Dundee City Council"
+            style="width: 60px; height:60px;"></a>
+        <a href="http://www.educationscotland.gov.uk/"><img
+            src="https://tse3.mm.bing.net/th?id=OIP.bawbOETZ8HJexKbpBS7ppwHaC9&pid=Api" alt="Education Scotland"
+            style="width: 60px; height:60px;"></a>
+        <a href="https://app.parentpay.com/public/client/security/v2/#/login"><img
+            src="https://tse3.mm.bing.net/th?id=OIP.VxZRig9HkfZhpBCFEdyNEwHaFj&pid=Api" alt="Parent Pay Portal"
+            style="width: 60px; height:60px;"></a>
+      </div> <!-- Closes div class footerLeft -->
+      <!--float this right-->
+      <div class="footerRight"> <!-- Opens div class footerRight -->
+        <button>Settings</button>
+        <p>Contact Us
+          other contact info</p>
 
-      <h1> Junior Leadership</h1>
-      <p> Pupil Voice is extremely important in our school and we believe that the Junior Leadership Team allows our
-        pupils to have an
-        active role in the decision making process within the school as well as the learning and teaching process. Every
-        class has their
-        own representative voted by their peers and children within the school are encouraged to talk to their class
-        reps about any issues
-        of concern. This year, our JLT produced the first digital edition of BRILL News which
-        can be found above. </p>
+        <p>&#169; Barnhill Primary School 2023</p>
+      </div> <!-- Closes div class footerRight -->
 
-    </div> <!-- Closes div class mainBody -->
-
-    <!-- ------------------- Footer ------------------- -->
-
-    <div class="footer"> <!-- Opens div class footer -->
-      <footer>
-        <div class="footerLeft"> <!-- Opens div class footerLeft -->
-          <!--float this left-->
-          <h3> Useful Links</h3>
-          <a href="https://twitter.com/BarnhillPrimary"><img
-              src="https://www.phoronix.net/image.php?id=2023&image=twitter_x" alt="X (Twitter)"
-              style="width: 60px; height:60px;"></a>
-          <a href="https://secure.glowscotland.org.uk/login/login.htm"><img
-              src="https://tse3.mm.bing.net/th?id=OIP.2e_o-42OuCuPqAyTXplgXAHaEc&pid=Api" alt="Glow RM Unify"
-              style="width: 60px; height:60px;"></a>
-          <a href="https://www.dundeecity.gov.uk/"><img
-              src="https://tse2.mm.bing.net/th?id=OIP.mOvYybLpOpVzVJpuYj5pjQHaFM&pid=Api" alt="Dundee City Council"
-              style="width: 60px; height:60px;"></a>
-          <a href="http://www.educationscotland.gov.uk/"><img
-              src="https://tse3.mm.bing.net/th?id=OIP.bawbOETZ8HJexKbpBS7ppwHaC9&pid=Api" alt="Education Scotland"
-              style="width: 60px; height:60px;"></a>
-          <a href="https://app.parentpay.com/public/client/security/v2/#/login"><img
-              src="https://tse3.mm.bing.net/th?id=OIP.VxZRig9HkfZhpBCFEdyNEwHaFj&pid=Api" alt="Parent Pay Portal"
-              style="width: 60px; height:60px;"></a>
-        </div> <!-- Closes div class footerLeft -->
-        <!--float this right-->
-        <div class="footerRight"> <!-- Opens div class footerRight -->
-          <button>Settings</button>
-          <p>Contact Us
-            other contact info</p>
-
-          <p>&#169; Barnhill Primary School 2023</p>
-        </div> <!-- Closes div class footerRight -->
-
-      </footer>
-    </div> <!-- Closes div class footer -->
+    </footer>
+  </div> <!-- Closes div class footer -->
 
 </body>
 
