settings popup trial numero uno

--- a/contact.html
+++ b/contact.html
@@ -54,6 +54,10 @@
       <p style="display: inline-block;">Falkland Crescent <br> Dundee <br> DD5 3SQ </p>
     </div>
 
+    <div id="settingsPopup"> 
+      <h1 onclick="enlargeText()"> Big <h1>
+    </div>
+
     <h2> Tel: </h2>
     <ul>
       <li> School: 01382 436993 </li>
@@ -93,7 +97,7 @@
         </div> <!-- Closes div class footerLeft -->
         <!--float this right-->
         <div class="footerRight"> <!-- Opens div class footerRight -->
-          <button>Settings</button>
+          <h2 onclick="showSettings()">Settings</h2>
           <p>Contact Us
             other contact info</p>
 
