settings popup test numero dos

--- a/contact.html
+++ b/contact.html
@@ -54,8 +54,10 @@
       <p style="display: inline-block;">Falkland Crescent <br> Dundee <br> DD5 3SQ </p>
     </div>
 
-    <div id="settingsPopup"> 
-      <h1 onclick="enlargeText()"> Big <h1>
+    <div id="settingsPopup">
+      <h1 onclick="enlargeText()"> Big </h1>
+      <h1 onclick="shrinkText()"> Small </h1>
+      <h1 onclick="enlargeText()"> Font </h1>
     </div>
 
     <h2> Tel: </h2>
