go to helvetica javascript

--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
     <div id="settingsPopup">
       <h1 onclick="enlargeText()"> Big </h1>
       <h1 onclick="shrinkText()"> Small </h1>
-      <h1 onclick="enlargeText()"> Font </h1>
+      <h1 onclick="changeFont()"> Font </h1>
     </div>
 
     <h2> Tel: </h2>
