unfinished footer fix

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
   <div class="mainBody"> <!-- Opens div class mainBody -->
 
-    <div class="content"> <!-- Opens div class content -->
+  
 
       <div class="welcomeMsg"> <!-- Opens div class welcomeMsg -->
 
@@ -183,18 +183,15 @@
         </div> <!-- Closes div id HTmain -->
       </div> <!-- Closes div id HTtext -->
 
-    </div> <!-- Closes class content-->
+    </div> 
 
     <!-- ------------------- Footer ------------------- -->
 
 
-    <div class="footer"> <!-- Opens div class footer -->
-
+    <div id="footer">
       <footer>
-        <div class="footerLeft"> <!-- Opens div class footerLeft -->
-
-          <!--float this left-->
           <h3> Useful Links</h3>
+          
           <a href="https://twitter.com/BarnhillPrimary"><img
               src="https://www.phoronix.net/image.php?id=2023&image=twitter_x" alt="X (Twitter)"
               style="width: 60px; height:60px;"></a>
@@ -210,19 +207,17 @@
           <a href="https://app.parentpay.com/public/client/security/v2/#/login"><img
               src="https://tse3.mm.bing.net/th?id=OIP.VxZRig9HkfZhpBCFEdyNEwHaFj&pid=Api" alt="Parent Pay Portal"
               style="width: 60px; height:60px;"></a>
-        </div> <!-- Closes div class footerLeft -->
-        <!--float this right-->
-        <div class="footerRight"> <!-- Opens div class footerRight -->
+        
           <button>Settings</button>
-          <p>Contact Us </p>
-
+          <p>Contact Us
+            <br></p>
+  
           <p>&#169; Barnhill Primary School 2023</p>
-        </div> <!-- Closes div class footerRight -->
-
+  
+  
       </footer>
-    </div> <!-- Closes div class footer -->
+    </div>
 
-  </div> <!-- Closes div class mainBody -->
 
   <!-- ------------------- Javascript ------------------- -->
 
