--- a/news.html
+++ b/news.html
@@ -10,6 +10,7 @@
 
 <body>
   <script src="script.js"></script>
+  <div class="mainBody"> <!-- Opens div class mainBody -->
 
   <!-- ------------------- Navigation ------------------- -->
   <header>
@@ -42,7 +43,7 @@
 
   <!-- ------------------- Main Body ------------------- -->
 
-  <div class="mainBody"> <!-- Opens div class mainBody -->
+
 
     <h1 id="pageTitle"> News</h1>
     <h2>This week's news!</h2>
@@ -66,11 +67,10 @@
 
   <!-- ------------------- Footer ------------------- -->
 
-  <div class="footer"> <!-- Opens div class footer -->
+  <div id="footer">
     <footer>
-      <div class="footerLeft"> <!-- Opens div class footerLeft -->
-        <!--float this left-->
         <h3> Useful Links</h3>
+        
         <a href="https://twitter.com/BarnhillPrimary"><img
             src="https://www.phoronix.net/image.php?id=2023&image=twitter_x" alt="X (Twitter)"
             style="width: 60px; height:60px;"></a>
@@ -86,18 +86,17 @@
         <a href="https://app.parentpay.com/public/client/security/v2/#/login"><img
             src="https://tse3.mm.bing.net/th?id=OIP.VxZRig9HkfZhpBCFEdyNEwHaFj&pid=Api" alt="Parent Pay Portal"
             style="width: 60px; height:60px;"></a>
-      </div> <!-- Closes div class footerLeft -->
-      <!--float this right-->
-      <div class="footerRight"> <!-- Opens div class footerRight -->
+      
         <button>Settings</button>
         <p>Contact Us
-          other contact info</p>
+          <br></p>
 
         <p>&#169; Barnhill Primary School 2023</p>
-      </div> <!-- Closes div class footerRight -->
+
 
     </footer>
-  </div> <!-- Closes div class footer -->
+  </div>
+
 
 </body>
 
