--- a/uniform.html
+++ b/uniform.html
@@ -10,6 +10,7 @@
 
 <body>
   <script src="script.js"></script>
+  <div class="mainBody"> <!-- Opens div class mainBody -->
 
   <!-- ------------------- Navigation ------------------- -->
   <header>
@@ -42,8 +43,8 @@
 
   <!-- ------------------- Main Body ------------------- -->
 
-  <div class="mainBody"> <!-- Opens div class mainBody -->
-    <div class="content">
+
+
 
       <h1 id="pageTitle"> Uniform </h1>
       <p> At Barnhill, we believe that uniform plays an important part in unifying our pupils both together and with the
@@ -230,11 +231,10 @@
 
     <!-- ------------------- Footer ------------------- -->
 
-    <div class="footer"> <!-- Opens div class footer -->
+    <div id="footer">
       <footer>
-        <div class="footerLeft"> <!-- Opens div class footerLeft -->
-          <!--float this left-->
           <h3> Useful Links</h3>
+          
           <a href="https://twitter.com/BarnhillPrimary"><img
               src="https://www.phoronix.net/image.php?id=2023&image=twitter_x" alt="X (Twitter)"
               style="width: 60px; height:60px;"></a>
@@ -250,18 +250,17 @@
           <a href="https://app.parentpay.com/public/client/security/v2/#/login"><img
               src="https://tse3.mm.bing.net/th?id=OIP.VxZRig9HkfZhpBCFEdyNEwHaFj&pid=Api" alt="Parent Pay Portal"
               style="width: 60px; height:60px;"></a>
-        </div> <!-- Closes div class footerLeft -->
-        <!--float this right-->
-        <div class="footerRight"> <!-- Opens div class footerRight -->
+        
           <button>Settings</button>
-          <p>Contact Us</p>
-
+          <p>Contact Us
+            <br></p>
+  
           <p>&#169; Barnhill Primary School 2023</p>
-        </div> <!-- Closes div class footerRight -->
-
+  
+  
       </footer>
-    </div> <!-- Closes div class footer -->
-  </div> <!-- Closes div class mainBody -->
+    </div>
+
 
 </body>
 
