--- a/staff.html
+++ b/staff.html
@@ -10,7 +10,7 @@
 
 <body>
   <script src="script.js"></script>
-  <div class="mainBody"> <!-- Opens div class mainBody -->
+<div id="mainBody">
     <!-- ------------------- Navigation ------------------- -->
     <header>
       <h1> Barnhill Primary School </h1>
@@ -132,13 +132,13 @@
           <td> Miss Ramsay </td>
         </tr>
       </table>
-    
+    </div>
   </div>
 
 
   <!-- ------------------- Footer ------------------- -->
 
-  <div id="footer">
+<div id="footer">
     <footer>
         <h3> Useful Links</h3>
         
