--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@
               src="https://tse3.mm.bing.net/th?id=OIP.VxZRig9HkfZhpBCFEdyNEwHaFj&pid=Api" alt="Parent Pay Portal"
               style="width: 60px; height:60px;"></a>
         
-          <button>Settings</button>
+          <button onclick="showSettings()">Settings</button>
           <p>Contact Us
             <br></p>
   
