--- a/uniform.html
+++ b/uniform.html
@@ -10,7 +10,7 @@
 
 <body>
   <script src="script.js"></script>
-  <div class="mainBody"> <!-- Opens div class mainBody -->
+  <div id="mainBody"> <!-- Opens div class mainBody -->
 
   <!-- ------------------- Navigation ------------------- -->
   <header>
